force-app/main/default/objects/FieloPLT__Transaction__c/fields/Actual_Cash_Point_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cash_Point_Cost__c</fullName>
    <description>Costo of Cash Point at the moment of earning</description>
    <formula>FieloPLT__Member__r.FieloPLT__Program__r.Actual_Cash_Point_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Costo of Cash Point at the moment of earning</inlineHelpText>
    <label>Actual Cash Point Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>