force-app/main/default/objects/FieloPLT__Transaction__c/fields/Cash_Point_Cost__c.field-meta.xml
<CustomField>
    <fullName>Cash_Point_Cost__c</fullName>
    <description>Cash Point Cost at the moment of earning</description>
    <label>Cash Point Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>