force-app/main/default/objects/FieloPLT__Transaction__c/fields/Cash_Points_Transaction_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Cash_Points_Transaction_Expiration_Date__c</fullName>
    <label>Cash Point Expiration Date</label>
    <type>Date</type>
</CustomField>