force-app/main/default/objects/FieloPLT__Transaction__c/fields/Growth_Point_Transaction_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Growth_Point_Transaction_Expiration_Date__c</fullName>
    <label>Growth Point Expiration Date</label>
    <type>Date</type>
</CustomField>