force-app/main/default/objects/FieloPLT__Transaction__c/fields/Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Item</label>
    <referenceTo>FieloPRP__InvoiceItem__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>