force-app/main/default/objects/FieloPLT__Transaction__c/fields/ProgramActualCost__c.field-meta.xml
<CustomField>
    <fullName>ProgramActualCost__c</fullName>
    <description>Costo of Points at the moment of earning</description>
    <formula>FieloPLT__Member__r.FieloPLT__Program__r.FieloPLT__ActualPointCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Costo of Points at the moment of earning</inlineHelpText>
    <label>Actual Point Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>