force-app/main/default/objects/FieloPLT__Transaction__c/fields/Sticking_Code__c.field-meta.xml
<CustomField>
    <fullName>Sticking_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sticking Code</label>
    <referenceTo>Fielo_sticking_code__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>